# QtModbusTool

./: .gitignore  BUILD_NOTES.md  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
src/: crc16.cpp  crc16.h  cyclicsender.cpp  cyclicsender.h  logpanel.cpp  logpanel.h  main.cpp  mainwindow.cpp  mainwindow.h
